aggiunta top footer

--- a/src/assets/style/global-part/_variables.scss
+++ b/src/assets/style/global-part/_variables.scss
@@ -9,5 +9,6 @@
      /*------------------------------
             CONTAINERS
     ------------------------------*/
-    --container-md: 85rem;
+    --container-md: 90rem;
+    --container-sm: 80rem;
 }
