--- a/src/assets/style/global-part/_containers.scss
+++ b/src/assets/style/global-part/_containers.scss
@@ -3,3 +3,9 @@
     width: 100%;
     max-width: var(--container-md);
 }
+
+.container-small{
+    margin: auto;
+    width: 100%;
+    max-width: var(--container-sm);
+}
